# Pocket-Lawyer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: PRD.md  ROADMAP.md
src/pocket_lawyer/: __init__.py  __main__.py  analyzer.py  api.py  cli.py  intake.py  models.py  rules.py  storage.py
tests/: test_analyzer.py  test_api.py  test_cli.py  test_contract_types.py  test_intake.py  test_project_scaffold.py  test_storage.py
tests/fixtures/: sample_green_contract.txt
web/: index.html
web/static/: app.js  styles.css
