[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-lawyer"
version = "0.1.0"
description = "Pocket Lawyer MVP for Indian employment contract risk scanning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pocket-lawyer = "pocket_lawyer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
